refactor: remove prev form^ use form from onlyOffice

--- a/datacenter-project/#src/components/base/_calculator-configurator.html
+++ b/datacenter-project/#src/components/base/_calculator-configurator.html
@@ -19,7 +19,11 @@
                         <h3 class="configurator__title configurator__title_light">Итоговая конфигурация</h3>
                         <div class="result__server"> </div>
                         <div class="horizontal-line"></div>
-                        <div class="result__cost"></div>
+                        <div class="result__container">
+                            <p class="paragraph">Итоговая цена аренды сервера</p>
+                            <div class="horizontal-line"></div>
+                            <div class="result__cost"></div>
+                        </div>
                         <button class="button button_colored result__btn">
                             <span>Добавить в корзину</span>
                         </button>
