--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -58,6 +58,7 @@
 
 //info
 @import "./components/info/new-partners";
+@import "./components/info/advices";
 @import "./components/error";
-
+@import "./components/success";
 
