feat: add hatamail page

--- a/datacenter-project/#src/components/info/_newpartners.html
+++ b/datacenter-project/#src/components/info/_newpartners.html
@@ -159,7 +159,8 @@
                         type="hidden" name="web_form_key" value="c8190c86-cc9c-43db-881e-7f6fb92197d5"><input
                         type="hidden" name="notify_list" value="cf3c516b-ca44-4a7e-8cb8-65b346220173"><input
                         type="hidden" name="managers_list" value="cf3c516b-ca44-4a7e-8cb8-65b346220173"><input
-                        type="hidden" name="share_type" value="0"></form>
+                        type="hidden" name="share_type" value="0">
+                </form>
 
 
             </div>
