--- a/datacenter-project/#src/scss/abstarct/variable.scss
+++ b/datacenter-project/#src/scss/abstarct/variable.scss
@@ -2,6 +2,8 @@ $color-primary: #3e77bb;
 $color-secondary:  #172433;
 $color-light-grey: #f8f8f8;
 $color-light: #fff;
+$color-light-30: rgba(255, 255, 255, 0.30);
+$color-light-50: rgba(255, 255, 255, 0.50);;
 $color-dark: #000;
 $color-link: #0f4d96;
 $color-disabled: rgba(0, 0, 0, 0.34);
@@ -9,9 +11,11 @@ $color-gradient-primary: #ea5c2f;
 $color-gradient-secondary: #f3b921;
 $color-gradient-layer1: #1f78e0;
 $color-gradient-layer2: #00c2ff;
-
-
-
+$hm-black-light: #454545;
+$hm-black-dark: #252525;
+$hm-black-light-30: rgba(69, 69, 69, 0.30);
+$hm-purple: #5E4574;
+$hm-bg: #F5F5F7;
 
 
 
