--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -50,6 +50,17 @@
 //services
 @import "components/services/services";
 
+//hatamail
+
+@import "components/hatamail/header";
+@import "components/hatamail/promo";
+@import "components/hatamail/services";
+@import "components/hatamail/possibilities";
+@import "components/hatamail/advantages";
+@import "components/hatamail/tariff";
+@import "components/hatamail/whywe";
+@import "components/hatamail/faq";
+@import "components/hatamail/form";
 
 //for client
 
