--- a/datacenter-project/#src/scss/abstarct/placeholders.scss
+++ b/datacenter-project/#src/scss/abstarct/placeholders.scss
@@ -33,3 +33,8 @@
   background-clip: text;
   color: transparent;
 }
+
+
+%violet-gradient-bg{
+  background: linear-gradient(135deg, rgba(188, 231, 255, 0.70) 0%, rgba(168, 193, 254, 0.70) 100%);
+}
