--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -1,6 +1,8 @@
 .button{
-  border-radius: 16px;
-  padding: 14px 42px;
+  //border-radius: 16px; // prev style
+  // padding: 14px 42px; // prev style
+  padding: 24px 40px;
+  border-radius: 36px;
   display: inline-block;
   cursor: pointer;
   @extend %transition;
@@ -12,7 +14,8 @@
 
     span {
       @extend %gradient-text;
-      @include font($size: 1.6rem);
+      // @include font($size: 1.6rem); // prev style
+      @include font($size: 1.8rem, $weight: 600);
     }
 
   }
@@ -20,12 +23,13 @@
 
   &_bordered{
     border: 1px solid transparent;
-    box-shadow: inset 0 0 0 100vw $color-light;
+    @include background-bordered-btn();
     @include gradient;
 
     span {
       @extend %gradient-text;
-      @include font($size: 1.6rem);
+      // @include font($size: 1.6rem); // prev style
+      @include font($size: 1.8rem, $weight: 600);
 
 
       @include hover{
@@ -36,9 +40,11 @@
       }
     }
 
-    &:hover {
-      @include gradient;
-      box-shadow: none !important;
+    @include hover{
+      &:hover {
+        @include gradient;
+        box-shadow: none !important;
+      }
     }
 
     @include hover{
@@ -53,9 +59,11 @@
 
   &_colored{
     @include gradient;
+    @include font($size: 1.8rem, $weight: 600);
 
-    &>*{
-      @include font($size: 1.6rem);
+    & > *{
+      // @include font($size: 1.6rem); // prev style
+      @include font($size: 1.8rem, $weight: 600);
       color: $color-light;
     }
   }
@@ -66,7 +74,8 @@
     pointer-events: none;
 
     &>*{
-      @include font($size: 1.6rem);
+      // @include font($size: 1.6rem); // prev style
+      @include font($size: 1.8rem, $weight: 600);
       color: $color-disabled;
     }
   }
