--- a/datacenter-project/#src/scss/components/company/contacts/contacts.scss
+++ b/datacenter-project/#src/scss/components/company/contacts/contacts.scss
@@ -79,7 +79,8 @@
     background: $color-light-grey;
 
     .contacts-nav__button {
-      box-shadow: inset 0 0 0 100vw $color-light-grey;
+      @include background-bordered-btn($color: $color-light-grey);
+      //box-shadow: inset 0 0 0 100vw $color-light-grey;
     }
   }
 
