fix: fix image path

--- a/datacenter-project/#src/components/hatamail/_FAQ.html
+++ b/datacenter-project/#src/components/hatamail/_FAQ.html
@@ -6,7 +6,7 @@
                     <div class="left-column">
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Кому подходит корпоративная почта HataMail на выделенном почтовом сервере?</p>
                             </div>
                             <div class="card__body">
@@ -18,7 +18,7 @@
                         </div>
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Где хранятся данные?</p>
                             </div>
                             <div class="card__body">
@@ -30,7 +30,7 @@
                         </div>
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Как установить рабочую почту на мобильном телефоне?</p>
                             </div>
                             <div class="card__body">
@@ -44,7 +44,7 @@
                     <div class="right-column">
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Чем выгодна аренда выделенного почтового сервера в отличие от облака?</p>
                             </div>
                             <div class="card__body">
@@ -56,7 +56,7 @@
                         </div>
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Можно ли открыть расписание встреч в календаре другим коллегам?</p>
                             </div>
                             <div class="card__body">
@@ -68,7 +68,7 @@
                         </div>
                         <div class="hm-faq__card">
                             <div class="card__header">
-                                <img class="card__arrow" src="./../../img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
+                                <img class="card__arrow" src="img/hatamail/FAQ/arrow.svg" alt="arrow.svg">
                                 <p class="card__header-text">Есть ли ограничения на входящий и исходящий поток писем?</p>
                             </div>
                             <div class="card__body">
