--- a/datacenter-project/#src/components/hatamail/_advantages.html
+++ b/datacenter-project/#src/components/hatamail/_advantages.html
@@ -4,7 +4,7 @@
         <h3 class="hm__title">Преимущества корпоративной <br> почты HataMaill</h3>
         <div class="layout-2-column layout-2-column_reverse">
             <div class="hm-card">
-                <img src="./../../img/hatamail/advantages/sla.svg" alt="sla.svg">
+                <img src="img/hatamail/advantages/sla.svg" alt="sla.svg">
                 <p class="hm-card__text">Полное соответствие требованиям законодательства Республике Беларусь по защите
                     и хранению персональных данных и использованию национального сегмента сети Интернет</p>
                 <span class="hm-card__line"></span>
@@ -24,27 +24,27 @@
             <h4 class="hm__subtitle-block">Безопасность</h4>
             <h5>Мы обеспечиваем высокий уровень безопасности данных <br> используя самые современные и надежные технологии</h5>
             <div class="hm__hidden-container layout-3-column">
-                <div class="security__card"><img src="./../../img/hatamail/advantages/cloud.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/cloud.svg" alt="">
                     <p>Данные хранятся на выделенном сервере и доступны только вам</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/key.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/key.svg" alt="">
                     <p>Мы шифруем весь входящий и исходящий трафик современными протоколами шифрования (TLS v1.3 и
                         др)</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/copy.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/copy.svg" alt="">
                     <p>Нами предусмотрено ежедневное автоматическое резервное
                         копирование </p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/guard.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/guard.svg" alt="">
                     <p>Наши сетевая система легко обнаруживает и отражает DDoS aтаки</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/mail.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/mail.svg" alt="">
                     <p>Каждое письмо автоматически проверяется антиспамом и антивирусом</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/channel.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/channel.svg" alt="">
                     <p>У нас настроены быстрые каналы связи со всеми белорусскими провайдерами</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/encryption.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/encryption.svg" alt="">
                     <p>Возможно шифрование данных на сервере и в резервных копиях ключом, который доступен только
                         вам</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/personal_data.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/personal_data.svg" alt="">
                     <p>Система детектирования fail2ban защищает учетные записи от взлома даже методом подбора
                         паролей</p></div>
-                <div class="security__card"><img src="./../../img/hatamail/advantages/auth.svg" alt="">
+                <div class="security__card"><img src="img/hatamail/advantages/auth.svg" alt="">
                     <p>Двухфакторная аутентификация 2FA обеспечивает дополнительный уровень защиты при входе в
                         систему</p></div>
             </div>
