--- a/datacenter-project/#src/components/hatamail/_possibilities.html
+++ b/datacenter-project/#src/components/hatamail/_possibilities.html
@@ -49,10 +49,10 @@
                             <li>Уведомления, поиск, статистика <br> сделают работу с почтой удобной и эффективной</li>
                         </ul>
                     </div>
-                    <img src="./../../img/hatamail/possibilities/mail.png" alt="mail.png">
+                    <img src="img/hatamail/possibilities/mail.png" alt="mail.png">
                 </div>
                 <div class="info__storage hm__info__items layout-2-column layout-2-column_reverse">
-                    <img src="./../../img/hatamail/possibilities/mail.png" alt="mail.png">
+                    <img src="img/hatamail/possibilities/mail.png" alt="mail.png">
                     <div class="storage info__container">
                         <h5 class="hm__subtitle-block">Облачное файловое хранилище Next Cloud</h5>
                         <ul>
