--- a/datacenter-project/#src/components/hatamail/_services.html
+++ b/datacenter-project/#src/components/hatamail/_services.html
@@ -26,24 +26,24 @@
             <div class="carousel">
                 <ul class="slides">
                     <li>
-                        <img src="./../../img/hatamail/services/mail.svg" alt="mail.svg">
+                        <img src="img/hatamail/services/mail.svg" alt="mail.svg">
                         <h5 class="hm__subtitle-block">Почта</h5>
                         <p>Отправляйте и получайте сообщения
                             в своей почте на любом устройстве через web-интерфейс или привычный почтовый клиент.
                             Настраивайте вашу почту под ваши задачи и цели</p>
                     </li>
                     <li>
-                        <img src="./../../img/hatamail/services/nextCloud.svg" alt="nextCloud.svg">
+                        <img src="img/hatamail/services/nextCloud.svg" alt="nextCloud.svg">
                         <h5 class="hm__subtitle-block">Облачное файловое хранилище NextCloud</h5>
                         <p>Загружайте файлы в хранилище на сервере из любого места и любого устройства, управляйте доступом к ним.</p>
                     </li>
                     <li>
-                        <img src="./../../img/hatamail/services/note.svg" alt="note.svg">
+                        <img src="img/hatamail/services/note.svg" alt="note.svg">
                         <h5 class="hm__subtitle-block">Адресная книга</h5>
                         <p>Храните контакты в одном месте. Создавайте группы для рассылок и совместного доступа. Экспортируйте и импортируйте контакты</p>
                     </li>
                     <li>
-                        <img src="./../../img/hatamail/services/calendar.svg" alt="calendar.svg">
+                        <img src="img/hatamail/services/calendar.svg" alt="calendar.svg">
                         <h5 class="hm__subtitle-block">Календари и задачи</h5>
                         <p>Создавайте публичные или личные события и задачи. Устанавливайте напоминания о встречах, делитесь своим расписанием с коллегами.</p>
                     </li>
