--- a/datacenter-project/#src/components/hatamail/_tariff.html
+++ b/datacenter-project/#src/components/hatamail/_tariff.html
@@ -6,10 +6,10 @@
             <div class="hm-calculator__description">
                 <h5>Каждый тариф включает</h5>
                 <div class="description-icons layout-4-column">
-                    <img src="./../../img/hatamail/tariff/mail.svg" alt="mail.svg">
-                    <img src="./../../img/hatamail/tariff/cloud.svg" alt="cloud.svg">
-                    <img src="./../../img/hatamail/tariff/note.svg" alt="note.svg">
-                    <img src="./../../img/hatamail/tariff/calendar.svg" alt="calendar.svg">
+                    <img src="img/hatamail/tariff/mail.svg" alt="mail.svg">
+                    <img src="img/hatamail/tariff/cloud.svg" alt="cloud.svg">
+                    <img src="img/hatamail/tariff/note.svg" alt="note.svg">
+                    <img src="img/hatamail/tariff/calendar.svg" alt="calendar.svg">
                 </div>
                 <ul>
                     <li>Бесплатный перенос почты и настройку</li>
