--- a/datacenter-project/#src/scss/base/base.scss
+++ b/datacenter-project/#src/scss/base/base.scss
@@ -224,7 +224,7 @@ h4 {
   }
 
   @media (max-width: 420px) {
-    margin-bottom: 16px;
+    margin-bottom: 40px;
   }
 }
 
@@ -242,7 +242,7 @@ h4 {
   display: none;
   @media (max-width: 520px) {
     display: flex;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
   }
 }
 
@@ -261,7 +261,7 @@ h4 {
 }
 
 
-.arrow-container{
+.arrow-container {
   display: none;
   justify-content: center;
   align-items: center;
@@ -273,9 +273,6 @@ h4 {
   @media (max-width: 767px) {
     display: flex;
   }
-}
-
-.arrow__item{
 }
 
 .item__indicator{
