--- a/datacenter-project/#src/scss/components/hatamail/advantages.scss
+++ b/datacenter-project/#src/scss/components/hatamail/advantages.scss
@@ -41,7 +41,7 @@
   padding-bottom: 96px;
 
   @media (max-width: 768px) {
-      align-items: center;
+    align-items: center;
   }
 
   &:after {
@@ -66,6 +66,12 @@
   }
 }
 
+.hm-advantages {
+  .hm__title {
+    margin-bottom: 6.4rem;
+  }
+}
+
 .security__card {
   display: flex;
   flex-direction: column;
@@ -76,7 +82,7 @@
 
   @media (max-width: 768px) {
     align-items: center;
-    &:last-child{
+    &:last-child {
       margin-bottom: 24px;
     }
   }
@@ -95,13 +101,13 @@
 }
 
 
-.hm-card__advantages{
+.hm-card__advantages {
   align-items: flex-start;
   text-align: left;
   position: relative;
   min-height: 363px;
 
-  @media (max-width: 768px){
+  @media (max-width: 768px) {
     width: 100%;
     align-items: center;
     text-align: center;
@@ -111,12 +117,13 @@
 
   & > p {
     color: $hm-black-light;
-    &:last-child{
-     flex-grow: 1;
+
+    &:last-child {
+      flex-grow: 1;
     }
   }
 
-  &:after{
+  &:after {
     content: '';
     @include card-line(#D9D9D9);
     position: absolute;
@@ -126,30 +133,30 @@
   }
 
 
-  &_color{
+  &_color {
     background: linear-gradient(315deg, rgba(207, 210, 250, 0.20) 0%, rgba(185, 217, 255, 0.20) 100%);
   }
 }
 
-.advantages-support{
+.advantages-support {
   display: flex;
   flex-direction: column;
 
 
-  @media (max-width: 768px){
+  @media (max-width: 768px) {
     margin-bottom: 24px;
 
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
     }
   }
 
-  & > span{
+  & > span {
     color: #8DB3E0;
     @include font($size: 2.4rem, $weight: 700);
   }
 
-  & > p{
+  & > p {
     @include font($size: 1.8rem, $weight: 400, $height: 140%);
     color: $hm-black-light;
 
